# m2m-rs

./: Cargo.toml
data/: clients.json
src/: client.rs  file_store.rs  handler.rs  main.rs  static_store.rs  token.rs
