[package]
name = "oct-simple"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.18.0", features = ["v4"] }
base64 = "0.22.1"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
chrono = "0.4.41"
env_logger = "0.11.8"
